# Artwave

./: .gitignore  CMakeLists.txt  desktop.sh
src/: CMakeLists.txt
src/core/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
src/managers/: CMakeLists.txt  FileManager.cpp  FileManager.hpp
src/python_module/: __init__.py  main.py  my_module.py  tasks.py
src/resources/: CMakeLists.txt
src/ui/: CMakeLists.txt  MainPanel.cpp  MainPanel.hpp  StartDialog.cpp  StartDialog.hpp
